@@ -15,6 +15,7 @@
 -- terminal control now also with audio from stdin (bug 338) via
    /dev/tty or ctermid()
 -- re-print tag info on decrease of terminal width for a bit less mess
+-- print lyrics also to stderr
 -- remote control API v10 with "@P 3" as additonal message on track end
 -- also added PROGRESS command as opposite of SILENCE
 -- fix some verbosity, tweak help for --icy-interval
